--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,16 @@
 }
 
 
+.SingleDatePickerInput__withBorder{
+  border-radius: 10px !important;
+}
+
+.DateInput{
+  width: 100%;
+}
+
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
