--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -46,3 +46,28 @@
       }
     }
   }
+
+  .searchSection{
+    // background-color: #3282B8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    background: linear-gradient(
+      153deg,
+      rgba(16, 20, 27, 0.4) 0%,
+      rgba(16, 20, 27, 0) 100%
+    );
+    // backdrop-filter: blur(9.800000190734863px);
+    // background-color: #0F4C75;
+    
+  }
+
+  .searchWrapper{
+    display: flex;
+    justify-content: center;
+  
+  }
