--- a/src/App.css
+++ b/src/App.css
@@ -8,16 +8,21 @@
 }
 
 .SingleDatePickerInput__withBorder {
-  border-radius: 10px !important;
+  border-radius: 0.375rem !important;
+  
 }
 
 .DateInput {
   width: 100%;
+  border-radius: 0.375rem !important;
+  
 }
 
 .DateInput_input {
   color: black !important;
+  border-radius: 0.375rem !important;
   font-weight: 400 !important;
+  
 }
 
 @media (prefers-reduced-motion: no-preference) {
